@@ -36,6 +36,7 @@ import cascading.flow.hadoop.planner.rule.transformer.TapBalanceGroupGroupTransf
 import cascading.flow.hadoop.planner.rule.transformer.TapBalanceGroupMergeGroupTransformer;
 import cascading.flow.hadoop.planner.rule.transformer.TapBalanceGroupNonBlockingHashJoinTransformer;
 import cascading.flow.hadoop.planner.rule.transformer.TapBalanceGroupSplitMergeGroupTransformer;
+import cascading.flow.hadoop.planner.rule.transformer.TapBalanceGroupSplitMergeTransformer;
 import cascading.flow.hadoop.planner.rule.transformer.TapBalanceGroupSplitTransformer;
 import cascading.flow.hadoop.planner.rule.transformer.TapBalanceHashJoinBlockingHashJoinTransformer;
 import cascading.flow.hadoop.planner.rule.transformer.TapBalanceHashJoinSameSourceTransformer;
@@ -71,6 +72,7 @@ public class MapReduceHadoopRuleRegistry extends RuleRegistry
     // Balance with temporary Taps
     addRule( new TapBalanceGroupSplitTransformer() );
     addRule( new TapBalanceGroupSplitMergeGroupTransformer() );
+    addRule( new TapBalanceGroupSplitMergeTransformer() );
     addRule( new TapBalanceGroupMergeGroupTransformer() );
     addRule( new TapBalanceGroupGroupTransformer() );
     addRule( new TapBalanceCheckpointTransformer() );
